# com-etzhayyim-kanae

./: CLAUDE.md  MATURITY.md  README.md  actor.edn  bb.edn  dependencies.edn  kotoba.app.edn  manifest.edn  manifest.jsonld  repository-contracts.edn  run_tests.sh
.well-known/: did.json
contracts/: catalog.edn
contracts/lexicons/: flowNarrative.edn  fundFlowEdge.edn  methodNote.edn  visualizationManifest.edn
data/identity/: kanae.identity.journal.edn
docs/adr/: 2605302300-kanae-global-fiscal-flow-visualization-tier-b-actor-r0.edn  2606015200-wasm-actor-runtime-round-2-dagpb-mesh-kanae-erc725.edn
methods/: mesh.clj  project_yoro.cljc  test_charter_gates.cljc  test_methods.clj  test_net_flows.cljc  test_pipeline.cljc  test_project_yoro.clj  v1-global-seed.json
src/kanae/: murakumo.cljc
src/kanae/cells/social_post/: state_machine.cljc
src/kanae/methods/: assemble_flows.cljc  social.cljc
test/kanae/: murakumo_test.cljc
test/kanae/methods/: test_assemble_flows.clj  test_charter_gates.clj  test_methods.clj  test_net_flows.cljc
verify/: README.md
verify/kanae-fiscal-ingest/: Cargo.toml
verify/kanae-fiscal-ingest/src/: lib.rs
wasm/: build.sh
wasm/kanae-core/: Cargo.toml
wasm/kanae-core/src/: lib.rs
wasm/loader/: kanae-core.wasm
wire/contracts/lexicons/: flowNarrative.json  fundFlowEdge.json  methodNote.json  visualizationManifest.json
wire/identity/: did.json  profile.json
