# kanae-fiscal-ingest — kanae (鼎) global fiscal-flow ingest VERIFICATION actor
#
# A kotoba WASM Component Model guest that demonstrates the kanae R0 pipeline
# end-to-end on the live runtime (ADR-2605302300 + ADR-2605301625):
#   1. ingest a fiscal-flow slice (domestic chain + inter-governmental)
#   2. assert kanae.fundFlowEdge datoms into kotoba EAVT (the "datomic kotoba api")
#   3. call Murakumo `llm.infer` (gemma-4-26B-A4B-it) for a NON-adjudicating narrative
#   4. assert a kanae.flowNarrative datom (with murakumo attestation) into kotoba EAVT
#
# This is a VERIFICATION HARNESS, NOT one of the 5 gated production kanae cells
# (those stay path-reserved per ADR-2605302300 §2 until Council Lv6+ ratify).
# It carries the same constitutional discipline: NON-adjudicating (G4),
# Murakumo-only inference (G7), kotoba-native persistence (G2).
#
# Build (requires wasm32-wasip2 target):
#   rustup target add wasm32-wasip2
#   cargo build --target wasm32-wasip2 --release
# Output: target/wasm32-wasip2/release/kanae_fiscal_ingest.wasm
#
# STANDALONE project (empty [workspace]) so the wasm32 target does not
# contaminate any native host workspace — mirrors examples/kotoba-hello.
[package]
name    = "kanae-fiscal-ingest"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[workspace]

[dependencies]
wit-bindgen = { version = "0.28", default-features = false, features = ["macros"] }
